# cnvm

./: Cargo.toml  README.md
src/: args.rs  main.rs
src/commands/: init.rs  install.rs  mod.rs  switch.rs  uninstall.rs
src/filesystem/: cnvm.rs  mod.rs  node.rs  paths.rs
