[package]
name = "cnvm"
author = "Jakub Dorničák"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["derive"] }
clap_derive = { version = "4.0.10" }
dirs = "4.0.0"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }
indicatif = "0.17.1"
console = "0.15.2"