[package]
name = "cnvm"
author = "Jakub Dorničák"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["derive"] }
clap_derive = { version = "4.0.10" }
dirs = "4.0.0"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
indicatif = "0.17.1"
zip = "0.6.2"
quick-error = "2.0.1"
console = "0.15.2"
serde = { version = "1.0.145", features = ["derive"] }